package java_design_patterns.G_mediator.chat;

public interface ChatRoomInterface {

    public void showMsg(String msg, ParticipantInterface p);
}
