package java_design_patterns.G_mediator.chat;

public interface ParticipantInterface {
    void sendMsg(String msg);
    String getName();
}
